# cabal-sublib-bug

./: cabal-sublib-bug.cabal
src-a/: A.hs
